Version 0.13.4
    * #219 How to run a jenkins job with hidden fields?

Version 0.13.3
    * add GoTo Allure report
    * #213 NodeParameterDefinition is unsupported
    * #215 Read timed out: Add socket and connection timeout to Configuration (default 10 sec.)

Version 0.13.2
    * #64: NumberFormatException on start of IntelliJ
    * #207: NumberFormatException from Build.createBuildFromRss #207
    * #208: Jenkins.LoadBuilds already registered Exception

Version 0.13.1
    #202: Upload Patch not work for 2019.3.4+
    #201: Error reading jenkins.diff file
    #204: Password Parameter default value ignored

Version 0.13.0
    * 2020.1 API Compatibility
    * require JBR11 for version 2020.1+
    * #195: NullPointerException when "Show log" is clicked and Job Url is used as Server Address
    * #145: parameter separator plugin problems
    * #80: Support text parameters in builds
    * #190: Trigger Build on Double click
    * new Icons: Reuse Idea Icons and use Idea guideline for status color

Version 0.12.0
    * #141: Multibranch pipeline builds not shown
    * new Icons: Reuse Idea Icons and use Idea guideline for status color
    * #183: Feature Request: Offer option to use green balls instead of blue ones
    * #185: Error while parsing last Build Date for some Build
    * #110: org.json.simple.JSONObject cannot be cast to java.lang.String
    * #127: Argument for @NotNull parameter 'htmlBody'

Version 0.11.0
    * IDEA 2019.2+ Support
    * [fix] #163: spelling error in config form
    * [add] #161: Retry Failed Builds
    * [add] #140: Add View Log and Test Results
    * [add] #162: Add description text in build param dialog
    * [fix] #143: NullPointer when "Sort by Build Status" is active
    * [fix] #157: NullPointerException when trying to load builds (IntelliJ Version : 2017.3)
    * update JSON.simple to 3.1.0

Version 0.10.0
    * [fix] #137: Jenkins 2 compatibility
    * [fix] #135: NPE when Jenkins has some folder