@@ -1,6 +1,7 @@
 <h3>0.13.4</h3>
 <ul>
     <li>#219  How to run a jenkins job with hidden fields?</li>
+    <li>#218 "Show log" on Job without Build leads to error</li>
 </ul>
 <h3>0.13.3</h3>
 <ul>
